--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FitPro Gym Management System - Modern gym management dashboard" />
-    <title>FitPro Gym Management</title>
+    <meta name="description" content="GymHubTech - Modern gym management system" />
+    <title>GymHubTech</title>
   </head>
   <body>
     <div id="root"></div>
