--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/img/favicon.png" />
+    <link rel="icon" type="image/png" href="/img/kaizen-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="GymHubTech - Modern gym management system" />
-    <title>GymHubTech</title>
+    <meta name="description" content="Kaizen Gym - Modern gym management system" />
+    <title>Kaizen Fitness</title>
+    
   </head>
   <body>
     <div id="root"></div>
