--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/img/kaizen-logo.png" />
+    <link rel="icon" type="image/png" href="/img/kaizen-logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Kaizen Gym - Modern gym management system" />
     <title>Kaizen Fitness</title>
